--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules
 jspm_packages
+node_modules/
+public/
+.gatsby-context.js
+.DS_Store
+
 
 # Optional npm cache directory
 .npm
