--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,7 @@
-siteTitle="AlphabetJS"
+siteTitle="Delta platform"
 baseColor = "#884499"
-linkPrefix = "/gatsby-starter-documentation"
+linkPrefix = "/delta-documentation"
 docPages = [
   "/docs/",
   "/docs/getting-started/",
-  "/docs/how-to-run/",
-  "/docs/some-react-code/",
-  "/docs/the-next-step/",
-  "/docs/conclusion/",
 ]
